--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,3 +13,13 @@
     height:40px;
     /* margin:auto; */
 }
+
+.player{
+    position:relative;
+}
+
+img{
+    display:inline-block; 
+    height:100%; 
+    width:100%;
+}
